utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/valid/ArtifactNameTool.ac
package valid

tool ArtifactNameTool {
    path "some/awesome/path" resolved from CWD
}
