utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/invalid/ArtifactName.ac
package invalid

tool ArtifactName {
    path "some/awesome/path" resolved from CWD

    artifact someResource {
        path "some/other/awesome/path" resolved from CWD
    }
}
